--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,81 +1,128 @@
+$lighter: #fafafa;
+$lightgray: #e9ecef;
+$softgray: #ced4da;
+$dark: #343a40;
+$primary: #dfb38b;
+
 .board {
-  width: 360px;
-  height: 360px;
-  border: 1px solid black;
+  width: 362px;
+  height: 362px;
   margin: 0 auto;
   position: relative;
+  background-color: $lighter;
+  border: 1px solid $dark;
 }
 
 .marker {
-  width: 38px;
-  height: 38px;
+  width: 40px;
+  height: 40px;
+  border: 1px solid $softgray;
   float: left;
-  border: 1px solid black;
+  background-color: $lighter;
 }
 
-.hints {
+.border-b {
+  border-bottom: 1px solid $dark;
+}
+
+.border-r {
+  border-right: 1px solid $dark;
+}
+
+.value {
+  line-height: 38px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.close-select {
+  width: 100%;
+  cursor: pointer;
+  line-height: 38px;
+}
+
+.hints, .selects {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
+ 
 .hint-1, .hint-2, .hint-3, .hint-4, .hint-5, .hint-6, .hint-7, .hint-8, .hint-9 {
-  width: 3px;
-  height: 3px;
-  background-color: #ff0000;
+  width: 6px;
+  height: 6px;
+  margin: 3px;
+  background-color: $softgray;
+  border-radius: 50%;
+}
+
+.select-1, .select-2, .select-3, .select-4, .select-5, .select-6, .select-7, .select-8, .select-9 {
+  width: 120px;
+  height: 120px;
+  background-color: $lighter;
+  line-height: 120px;
+  text-align: center;
+  font-size: 72px;
+  font-weight: bold;
 }
 
 // Top left
-.hint-1 {
+.hint-1, .select-1 {
   grid-row: 1;
   grid-column: 1;
 }
 
 // Top center
-.hint-2 {
+.hint-2, .select-2 {
   grid-row: 1;
   grid-column: 2;
 }
 
 // Top right
-.hint-3 {
+.hint-3, .select-3 {
   grid-row: 1;
   grid-column: 3;
 }
 
 // Middle left
-.hint-4 {
+.hint-4, .select-4 {
   grid-row: 2;
   grid-column: 1;
 }
 
 // Middle center
-.hint-5 {
+.hint-5, .select-5 {
   grid-row: 2;
   grid-column: 2;
 }
 
 // Middle right
-.hint-6 {
+.hint-6, .select-6 {
   grid-row: 2;
   grid-column: 3;
 }
 
 // Bottom left
-.hint-7 {
+.hint-7, .select-7 {
   grid-row: 3;
   grid-column: 1;
 }
 
 // Bottom center
-.hint-8 {
+.hint-8, .select-8 {
   grid-row: 3;
   grid-column: 2;
 }
 
 // Bottom right
-.hint-9 {
+.hint-9, .select-9 {
   grid-row: 3;
   grid-column: 3;
+}
+
+.text-center {
+  text-align: center;
 }
